Fixes layout issues

--- a/portal/src/styles/vuetify-overrides.less
+++ b/portal/src/styles/vuetify-overrides.less
@@ -9,7 +9,7 @@
   .v-application .secondary {
     background-color: transparent !important;
     border-color: @dark-grey !important;
-    color: @dark-grey;
+    color: @grey;
   }
 }
 
@@ -55,4 +55,8 @@
 
 .v-btn:hover {
   text-decoration: none !important;
+}
+
+.new-header {
+  padding-top: 50px;
 }
