--- a/portal/src/variables.less
+++ b/portal/src/variables.less
@@ -10,7 +10,7 @@
 @white: #FFFFFF;
 @light-grey: #F4F6F8;
 @lighter-grey: #EAECF0;
-@grey: #B2B6BE;
+@grey: #B8E3C9;
 @darker-grey: #8C969F;
 @dark-grey: #5E6873;
 @black: #050E1D;
